# doc-forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  ruff.toml
src/docforge/: __init__.py  api.py  cli.py  config.py  exceptions.py  models.py
src/docforge/engine/: __init__.py  image_placement.py  table_engine.py
src/docforge/ocr/: __init__.py  paddle_backend.py  preprocessor.py  surya_backend.py
src/docforge/output/: image_writer.py  markdown_builder.py
src/docforge/parsers/: __init__.py  docx_parser.py  image_parser.py  pptx_parser.py  text_parser.py  xlsx_parser.py
src/docforge/parsers/pdf/: __init__.py  native.py  ocr.py  quality.py
src/docforge/utils/: file_utils.py
tests/: conftest.py
tests/benchmark/: test_quality_regression.py
tests/fixtures/pdf/: __init__.py  font_subset_chinese.golden.md  generate_fixtures.py  native_chinese.golden.md  native_english.golden.md  table_complex.golden.md  with_images.golden.md
tests/integration/: test_all_formats.py  test_smoke.py
tests/unit/: test_cli.py  test_config_exceptions.py  test_content_engine.py  test_docx_parser.py  test_format_detector.py  test_image_parser.py  test_image_placement.py  test_image_writer.py  test_markdown_builder.py  test_models.py  test_native_pdf.py  test_ocr_backend.py  test_ocr_fixtures.py  test_ocr_pdf_parser.py  test_paddle_backend.py  test_parser_registry.py  test_pdf_parser.py  test_pptx_parser.py  test_preprocessor.py  test_quality_checker.py  test_surya_backend.py  test_table_engine.py  test_table_extractor.py  test_text_cleaner.py  test_text_parser.py  test_xlsx_parser.py
