[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docforge"
version = "0.1.0"
description = "Universal document parser for RAG. Chinese-first."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
    "numpy>=2.3.5",
]

[project.optional-dependencies]
ocr-paddle = ["paddleocr>=2.7.0", "paddlepaddle>=2.6.0"]
ocr-surya = ["surya-ocr>=0.5.0"]
image-preprocess = ["opencv-python>=4.8.0"]
pptx = ["python-pptx>=0.6.23"]
all = ["docforge[ocr-paddle,ocr-surya,image-preprocess,pptx]"]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy"]

[project.scripts]
docforge = "docforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docforge"]
