[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docforge-parser"
version = "1.0.0"
description = "Universal document parser for RAG applications. Chinese-first."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "CalmDownTR" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
    # numpy is a hard transitive dep of Pillow (PIL._typing imports numpy.typing
    # at module top level), so it cannot be made optional. Pinned for the OCR path.
    "numpy>=2.3.5",
]

[project.urls]
Homepage = "https://github.com/CalmDownTR/docforge"
Repository = "https://github.com/CalmDownTR/docforge"
"Issue Tracker" = "https://github.com/CalmDownTR/docforge/issues"

[project.optional-dependencies]
ocr-paddle = ["paddleocr>=2.7.0", "paddlepaddle>=2.6.0"]
ocr-surya = [
    "surya-ocr>=0.5.0",
]
image-preprocess = ["opencv-python>=4.8.0"]
pptx = [
    "python-pptx>=0.6.23",
]
pdf-tables = ["pdfplumber>=0.11.0"]
all = ["docforge[ocr-paddle,ocr-surya,image-preprocess,pptx,pdf-tables]"]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy"]

[project.scripts]
docforge = "docforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docforge"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "fitz",
    "cv2",
    "pptx",
    "pptx.table",
    "paddleocr",
    "surya.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "build>=1.5.1",
    "lxml-stubs>=0.5.1",
    "types-openpyxl>=3.1.5.20260518",
    "types-tqdm>=4.68.0.20260608",
]
